--- a/user/src/main/resources/bootstrap.yml
+++ b/user/src/main/resources/bootstrap.yml
@@ -1,13 +1,15 @@
+server:
+  port: 8100
 spring:
   application:
-    name: order
+    name: user
   cloud:
     nacos:
       config:
         server-addr: 127.0.0.1:8848
         file-extension: yaml
         namespace: 7d3e5f19-a102-471a-b6e0-67bd7d1d35f3
-        group: order-config
+        group: USER_GROUP
       discovery:
         server-addr: 127.0.0.1:8848
         namespace: 7d3e5f19-a102-471a-b6e0-67bd7d1d35f3
