--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,21 @@
 # BlueJ files
 *.ctxt
 
+## mvn ##
+.mvn
+mvnw*
+target/
+!.mvn/wrapper/maven-wrapper.jar
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
 # Package Files #
 *.jar
